TODO: rxvt -help => (see rxvt-XXX(1))?
TODO: xor_rect should shift right
TODO IMPL: recalc bg only when not fully covering (no alpha, repeat|extend etc..)

TODO IMPL: colour-change event with index
TODO IMPL: recalc bg always on bg colour change

TODO: document typical actions in rxvt.1.pod keysyms
TODO: warn with a graphical message when env has been modified

	- the "moa redraw 8-bit british vintage colour management" release.
	- NOTICE: this release updates terminfo.
	- fix pixel droppings on overdraw when a secondary core font has the
          same height but different ascent.
        - implement cvvis in terminfo as blinking cursor, to distinguish it
          from cnorm (emacs uses cvvis which is commonly a blinking cursor).
        - when xft support was compiled in, color queries erroneously returned
          premultiplied values, this also affected internal queries, for example
          when calculating faded colors. alpha is now divided out when possible,
          which is more correct but loses color resolution.
	- add DECSCUSR xterm extension to set the cursor to a vertical bar.
	- add 'extension:string' action, and associated on_action perl
	  hook, for keysym resources that invokes actions provided by
	  perl extensions. The 'perl:string' action and
	  on_user_command hook are deprecated but still supported.
	- add 'builtin-string' action for keysym resources that restores string
	  mappings for keys that have predefined actions in urxvt.
	- add -k option to urxvtc for killing the daemon process.
	- add -dockapp option to make the wm treat urxvt as a dockapp.
	- add -mc option and multiClickTime resource to set the maximum time
	  between multi-click select events (patch by Joe Peterson).
	- new 'eval' extension to evaluate arbitrary perl code with keysym
	  bindings. The extension also provides methods that implement basic
	  actions, such as pasting selections and scrolling.